--- a/projet/module/Api/view/api/index/index.phtml
+++ b/projet/module/Api/view/api/index/index.phtml
@@ -1,1 +1,28 @@
 Action "index", controller "Index", module "Api".
+
+<?php
+$title = 'My albums';
+$this->headTitle($title);
+?>
+<h1><?php echo $this->escapeHtml($title); ?></h1>
+<p>
+    <a href="<?php echo $this->url('api', array('action'=>'add'));?>">Add new album</a>
+</p>
+
+<table class="table">
+    <tr>
+        <th>Title</th>
+        <th>Artist</th>
+        <th>&nbsp;</th>
+    </tr>
+    <?php foreach ($albums as $album) : ?>
+        <tr>
+            <td><?php echo $this->escapeHtml($album->title);?></td>
+            <td><?php echo $this->escapeHtml($album->artist);?></td>
+            <td>
+                <a href="<?php echo $this->url('api', array('action'=>'edit', 'id' => $album->id));?>">Edit</a>
+                <a href="<?php echo $this->url('api', array('action'=>'delete', 'id' => $album->id));?>">Delete</a>
+            </td>
+        </tr>
+    <?php endforeach; ?>
+ </table>
